# jg-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/ch/: adf.py  api.py  auth.py  brainstorm.py  cli.py  config.py  notifier.py  render.py  themes.py  tmux.py  tui.py
src/ch/commands/: ai.py  assign.py  auth.py  comment.py  create.py  dashboard.py  edit.py  link.py  pr.py  search.py  sprint.py  testcases.py  transition.py  view.py
src/jg/: __init__.py  _compat.py  adf.py  api.py  auth.py  brainstorm.py  cli.py  config.py  github.py  gradient.py  notifier.py  themes.py  tmux.py  tui.py
src/jg/commands/: ai.py  assign.py  auth.py  comment.py  create.py  dashboard.py  edit.py  link.py  pr.py  search.py  sprint.py  testcases.py  transition.py  view.py
tests/: test_adf.py  test_edit.py  test_gradient.py  test_render.py  test_transition.py
