[project]
name = "ch-cli"
version = "0.1.0"
description = "Fast Jira + GitHub CLI with TUI dashboard and Claude Code integration"
authors = [{ name = "Vibhu Chandrashekhar", email = "vibhu@outlook.com" }]
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "click>=8.1.7",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "rich>=13.7.0",
    "textual>=0.85.0",
    "pydantic>=2.7.0",
    "tomli-w>=1.0.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
ch = "ch.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "textual-dev>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ch"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
